--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Skills</title>
 </head>
 <body>
@@ -10,9 +11,7 @@
     <ul>
       <% skills.forEach(function(s) { %>
         <li>
-          <%= s.skill %>
-            - 
-          <%= s.acquired ? 'acquired' : 'not acquired' %>
+          <a href="/skills/<%= s.id %>"><%= s.skill %></a>
         </li>
       <% }); %>
     </ul>
