--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <title>Skills</title>
-</head>
-<a href="/">Home</a>
-<body>
-    <h1>Skills List</h1>
+<%- include('../partials/header') %>
+
+<h3>Skills as of <%= time %></h3>
     <ul>
-      <% skills.forEach(function(s) { %>
-        <li>
-          <a href="/skills/<%= s.id %>"><%= s.skill %></a>
-        </li>
-      <% }); %>
+        <% skills.forEach(function(s) { %>
+            <li>
+                <a href="/skills/<%= s.id %>"><%= s.skill %></a>
+            </li>
+        <% }); %>
     </ul>
-  </body>
-</html>
+    <a href="/skills/new">Add a skill</a>
+
+<%- include('../partials/footer') %>
