--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <title>Skills</title>
-</head>
-  <body>
-    <a href="/">Home</a>
-    |
-    <a href="/skills">All Skills</a>
+<%- include('../partials/header') %>
+
     <h3><%= skill.skill %></h3>
     <h3>Acquired: <%= skill.acquired ? 'Yes' : 'No' %></h3>
-  </body>
-</html>
+    
+<%- include('../partials/footer') %>
