Added edit and update

--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -4,7 +4,13 @@
     <ul>
         <% skills.forEach(function(s) { %>
             <li>
+                <form action="/skills/<%= s.id %>?_method=DELETE"
+                    class="delete-form" method="POST">
+                    <button type="submit">&times;</button>
+                  </form>
                 <a href="/skills/<%= s.id %>"><%= s.skill %></a>
+                - 
+                <%= s.acquired ? 'Acquired' : 'Not acquired' %>
             </li>
         <% }); %>
     </ul>
