--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -2,5 +2,6 @@
 
     <h3><%= skill.skill %></h3>
     <h3>Acquired: <%= skill.acquired ? 'Yes' : 'No' %></h3>
-    
+    <a href="/skills/<%= skill.id %>/edit">Edit Skill</a>
+
 <%- include('../partials/footer') %>
